Edited wiki page through web user interface.

--- a/wiki/PerformanceEvaluation.wiki
+++ b/wiki/PerformanceEvaluation.wiki
@@ -8,27 +8,28 @@ The search engine was used to process 2436 URLs and its performance was evaluate
 = Details =
 QUERY SET USED FOR THE STUDY
 
+
 S.No.	Query
-	
-1  	घ्राणनेत्रे
-2	  श्रोत्रजिव्ह
-3	  व्योमभूमिः
-4  	शुक्लं
-5  मधुरं
-6	  राम
-7	  रामाभ्याम्
-8	  रामभिः
-9	  दधिषु
-10	 "तैत्तिरीय ब्रह्मणम्" 
-11	 नक्षत्रसूक्तम्
-12	 "न मन्त्रो नौषधं"
-13	 नमो नारायणाय
-14 	श्रीराधास्तोत्रं
-15	 वैष्णवं
-16	 विप्राणां
-17	 अविशुद्धिभ्यां 
-18	 संवत्सरी
-19	 गणानां 
-20	 पशुपते 
-21 	शंकरं
-22	 मृगाधीशचर्माम्बरं
+<ol>	
+<li> 	घ्राणनेत्रे
+<li> श्रोत्रजिव्ह
+<li> व्योमभूमिः
+<li> शुक्लं
+<li> मधुरं
+<li> राम
+<li> रामाभ्याम्
+<li> रामभिः
+<li> दधिषु
+<li>	 "तैत्तिरीय ब्रह्मणम्" 
+<li>	 नक्षत्रसूक्तम्
+<li>	 "न मन्त्रो नौषधं"
+<li>	 नमो नारायणाय
+<li> 	श्रीराधास्तोत्रं
+<li>	 वैष्णवं
+<li>	 विप्राणां
+<li>	 अविशुद्धिभ्यां 
+<li>	 संवत्सरी
+<li>	 गणानां 
+<li>	 पशुपते 
+<li> 	शंकरं
+<li>	 मृगाधीशचर्माम्बरं
